# agentic-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
01_deep_research/: .env.example  deep_research.py  email_agent.py  pyproject.toml  research_manager.py
02_debate/src/debate/: crew.py
02_debate/src/debate/config/: agents.yaml  tasks.yaml
03_financial_researcher/: .env.example  pyproject.toml
03_financial_researcher/src/financial_researcher/: crew.py  main.py
03_financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
04_stock_picker/: .env.example
04_stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
04_stock_picker/output/: decision.md  research_report.json  trending_companies.json
04_stock_picker/src/stock_picker/: crew.py  main.py
04_stock_picker/src/stock_picker/config/: agents.yaml
04_stock_picker/src/stock_picker/tools/: push_tool.py
05_coder/output/: code_and_output.txt
05_coder/src/coder/: crew.py  main.py
06_engineering_team/: .env.example  pyproject.toml
06_engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
06_engineering_team/src/engineering_team/: crew.py  main.py
06_engineering_team/src/engineering_team/config/: tasks.yaml
07_sidekick/: app.py  pyproject.toml  sidekick.py  sidekick_tools.py
debate/: .env.example  pyproject.toml
debate/src/debate/: main.py
deep_research/: planner_agent.py  search_agent.py  writer_agent.py
