[project]
name = "07-sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.31.0",
    "langchain>=0.0.200",
    "langgraph>=0.3.18",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-experimental>=0.0.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
    "wikipedia>=1.4.0",
]
